# AISmartMirror

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  app_controller.py  main.py
audio/: __init__.py  speech_to_text.py  text_to_speech.py  voice_assistant.py
config/: __init__.py  settings.py
docs/: architecture.md  face_recognition_improvements.md  technical_revision_milestone1_2.md  testing.md
integrations/: __init__.py  elevenlabs_client.py  notifier.py  openai_client.py
scripts/: enroll_user.py  health_check.py  install_windows.ps1  run_local.py  test_camera.py
tests/: conftest.py  test_app_controller.py  test_camera.py  test_config.py  test_enroll_user.py  test_face_detector.py  test_face_recognizer.py  test_smoke.py
ui/: __init__.py  dashboard.py
utils/: __init__.py  helpers.py  logger.py
vision/: __init__.py  camera_manager.py  display.py  face_detector.py  face_recognizer.py  gesture_recognizer.py  recognition_smoother.py
