[project]
name = "ai-smart-mirror"
version = "0.1.0"
description = "AI Smart Mirror - Raspberry Pi capstone project"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "hardware: marks tests requiring real hardware (camera). Run with: pytest -m hardware",
]
